--- a/style.css
+++ b/style.css
@@ -13,6 +13,20 @@ h1 {
   margin: 0px; 
 }
 
+ul {
+    list-style: none;
+    margin-left: 40px;
+}
+
+li {
+  display: inline-flex;
+}
+
+li > a > img {
+  width: 120px;
+  margin: 5px 30px;
+}
+
 label {
   position: relative;
   top: -43px;
@@ -127,11 +141,11 @@ input[type=radio]:checked + label:after {
   margin-left: 10px;
 }
 #resume {
-  border: 1px solid;
-  width: 600px;
+  border: 1px solid #999;
+  width: 100px;
 }
 
-/* Star stuffs */
+/* Star styles */
 .star-container {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 0px 0px rgba(0, 0, 0, 1);
   height: 100px;
