--- a/style.css
+++ b/style.css
@@ -14,17 +14,9 @@ h1 {
 }
 
 ul {
-    list-style: none;
-    margin-left: 40px;
-}
-
-li {
-  display: inline-flex;
-}
-
-li > a > img {
-  width: 120px;
-  margin: 5px 30px;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 label {
@@ -71,7 +63,7 @@ input[type=radio]:checked + label:after {
   transition: 0.5s opacity ease-in, 0.8s transform ease;
   position: relative;
   top: 0;
-  z-index: 100;
+  z-index: 2;
   transform: translateY(0px);
   text-shadow: 0 0 0;
 }
@@ -81,7 +73,7 @@ input[type=radio]:checked + label:after {
   transition: 0.5s opacity ease-in, 0.8s transform ease;
   position: relative;
   top: 0;
-  z-index: 100;
+  z-index: 2;
   transform: translateY(0px);
   text-shadow: 0 0 0;
 }
@@ -91,7 +83,7 @@ input[type=radio]:checked + label:after {
   transition: 0.5s opacity ease-in, 0.8s transform ease;
   position: relative;
   top: 0;
-  z-index: 100;
+  z-index: 2;
   transform: translateY(0px);
   text-shadow: 0 0 0;
 }
@@ -101,7 +93,7 @@ input[type=radio]:checked + label:after {
   transition: 0.5s opacity ease-in, 0.8s transform ease;
   position: relative;
   top: 0;
-  z-index: 100;
+  z-index: 2;
   transform: translateY(0px);
   text-shadow: 0 0 0;
 }
@@ -130,8 +122,6 @@ input[type=radio]:checked + label:after {
   color: #444;
 }
 .container {
-  width: 100vw;
-  min-width: 600px;
   text-align: center;
 }
 .small-text {
@@ -151,6 +141,7 @@ input[type=radio]:checked + label:after {
   height: 100px;
   background: radial-gradient(ellipse at bottom, #eee 0%, #d2d2d2 100%);
   overflow: hidden;
+  text-align: center;
 }
 
 #stars {
@@ -210,5 +201,53 @@ input[type=radio]:checked + label:after {
   }
   to {
     transform: translateY(-2000px);
+  }
+}
+
+@media(max-width: 750px) {
+  body {
+    overflow: auto;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+  }
+
+  h3, h4 {
+    font-size: 2rem;
+  }
+  
+  label {
+    display: none;
+  }
+
+  .container {
+    padding-bottom: 200px;
+  }
+  
+  .star-container {
+    height: 90px;
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+  }
+
+  .tab__content {
+    display: block;
+    position: initial;
+    margin-top: 0;
+    top: 0;
+    opacity: 1;
+    z-index: 1;
+    height: initial;
+    overflow: auto;
+  }
+
+  .tab__content a, .tab__content p, tab__content .small-text {
+    font-size: 1.5rem;
+  }
+
+  .tab__content:nth-of-type(2) {
+    padding-top: 90px;
   }
 }
