--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
   font-size: 3em;
-  margin: 0px; 
+  margin: 0px;
 }
 
 ul {
@@ -120,15 +120,18 @@ input[type=radio]:checked + label:after {
 }
 .tab__content h3 {
   color: #444;
+  font-size: 2rem;
+  margin: 10px 0 30px 0;
+}
+.tab__content h4 {
+  font-size: 1.2rem;
+  margin: 0;
 }
 .container {
   text-align: center;
 }
 .small-text {
   font-family: monospace;
-}
-.project p {
-  margin-left: 10px;
 }
 #resume {
   border: 1px solid #999;
